[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logarithma"
version = "0.1.0"
description = "High-performance graph algorithms library featuring advanced shortest path algorithms"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Can AKYILDIRIM", email = "akyildirimcan@gmail.com"},
]
keywords = ["graph", "algorithms", "shortest-path", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "networkx>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
]
viz = [
    "matplotlib>=3.5",
    "plotly>=5.0",
]

[project.urls]
Homepage = "https://github.com/softdevcan/logarithma"
Repository = "https://github.com/softdevcan/logarithma"
"Bug Tracker" = "https://github.com/softdevcan/logarithma/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["logarithma*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]